nc-db-deploy-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud 
  labels:
    app: mariadb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb 
  template:
    metadata:
      labels:
        app: mariadb 
    spec:
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: nc-db-pvc
      containers:
      - name: mariadb 
        image: mariadb:latest 
        ports:
          - containerPort: 3306 
        args:
          - --transaction-isolation=READ-COMMITTED
          - --binlog-format=ROW
          - --max-connections=1000
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
          subPath: mariadb-data
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
