nc-server-deploy-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: nextcloud-storage
        persistentVolumeClaim: 
          claimName: nc-srv-pvc
      containers:
        - image: nextcloud
          name: nextcloud 
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html
              subPath: server-data
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  type: LoadBalancer
  selector:
    app: nextcloud
  ports:
  - protocol: TCP  
    port: 80
    targetPort: 80
