nc-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud 
spec:
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: nextcloud-server
            port:
              number: 80
